; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_number.c_array_true_divide.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_number.c_array_true_divide.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@nb_true_divide = common dso_local global i32 0, align 4
@array_inplace_true_divide = common dso_local global i32 0, align 4
@n_ops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @array_true_divide to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @array_true_divide(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* @nb_true_divide, align 4
  %10 = call i32 @BINOP_GIVE_UP_IF_NEEDED(i32* %7, i32* %8, i32 %9, i32* (i32*, i32*)* @array_true_divide)
  %11 = load i32*, i32** %4, align 8
  %12 = call i64 @PyArray_CheckExact(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %29

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = call i64 @PyArray_ISFLOAT(i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %14
  %19 = load i32*, i32** %4, align 8
  %20 = call i64 @PyArray_ISCOMPLEX(i32* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %18, %14
  %23 = load i32*, i32** %4, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = call i64 @try_binary_elide(i32* %23, i32* %24, i32* @array_inplace_true_divide, i32** %6, i32 0)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %22
  %28 = load i32*, i32** %6, align 8
  store i32* %28, i32** %3, align 8
  br label %34

29:                                               ; preds = %22, %18, %2
  %30 = load i32*, i32** %4, align 8
  %31 = load i32*, i32** %5, align 8
  %32 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @n_ops, i32 0, i32 0), align 4
  %33 = call i32* @PyArray_GenericBinaryFunction(i32* %30, i32* %31, i32 %32)
  store i32* %33, i32** %3, align 8
  br label %34

34:                                               ; preds = %29, %27
  %35 = load i32*, i32** %3, align 8
  ret i32* %35
}

declare dso_local i32 @BINOP_GIVE_UP_IF_NEEDED(i32*, i32*, i32, i32* (i32*, i32*)*) #1

declare dso_local i64 @PyArray_CheckExact(i32*) #1

declare dso_local i64 @PyArray_ISFLOAT(i32*) #1

declare dso_local i64 @PyArray_ISCOMPLEX(i32*) #1

declare dso_local i64 @try_binary_elide(i32*, i32*, i32*, i32**, i32) #1

declare dso_local i32* @PyArray_GenericBinaryFunction(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
